<resources>
    <string name="app_name">Hurry Here Now</string>
    <string name="action_settings">Settings</string>
    <string name="floating_button">Floating Button</string>
    <string name="move_marker_txt">Move marker to the offer location</string>
    <string name="spot_amp_share"><![CDATA[Spot & Share]]></string>
    <string name="continue_label"><![CDATA[Continue >]]></string>
    <string name="talk_label">Talk</string>
    <string name="vendor_icon">Vendor icon</string>
    <string name="rating_title">What did you think of this offer?</string>
    <string name="rating_thanks">Thank you for rating this offer!</string>
    <string name="success">Success</string>
    <string name="dismiss">Dismiss</string>
    <string name="groceries">Groceries</string>
    <string name="off_licence">Off-Licence</string>
    <string name="pubs_amp_bars"><![CDATA[Pubs & Bars]]></string>
    <string name="coffee_amp_cafes"><![CDATA[Coffee & Cafes]]></string>
    <string name="food">Food</string>
    <string name="hair_amp_beauty"><![CDATA[Hair & Beauty]]></string>
    <string name="other">Other</string>
    <string name="all_categories">All categories</string>
    <string name="offer_details">Offer Details</string>
    <string name="store_name">Store Name:</string>
    <string name="offer_description">Offer Description:</string>
    <string name="submit">Submit</string>
    <string name="offer_uploaded">Offer uploaded</string>
    <string name="no_offers_found">No offers found</string>
    <string name="_50_limit">50 limit</string>
    <string name="_100_limit">100 limit</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="vendor_page">Vendor page</string>
    <string name="address">Address</string>
    <string name="current_offers">Current Offers</string>
    <string name="no_offers">No offers...</string>

</resources>
