<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <ImageView
            android:id="@+id/image"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:padding="5dip"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:padding="5dip"
            android:text="@string/offer_details"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtOfferLatLon"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:gravity="end"
            android:paddingLeft="10dip"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="5.0dip"
        android:paddingTop="5.0dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtStoreName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingLeft="5.0dip"
                android:text="@string/store_name"
                android:textColor="@color/common_google_signin_btn_text_light" />

            <TextView
                android:id="@+id/txtStoreNameCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5dip"
                android:text="@string/_50_limit"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />
        </LinearLayout>

        <EditText
            android:id="@+id/editStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtOfferDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingLeft="5.0dip"
                android:text="@string/offer_description"
                android:textColor="@color/common_google_signin_btn_text_light" />

            <TextView
                android:id="@+id/txtOfferDescCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="5dip"
                android:text="@string/_100_limit"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="italic" />
        </LinearLayout>

        <EditText
            android:id="@+id/editOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="100"
            android:maxLines="3"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp">

            <TextView
                android:id="@+id/txtTandC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right|end"
                android:paddingTop="10dp"
                android:text=""
                android:textColor="@color/common_google_signin_btn_text_light" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1.0"
                android:gravity="top|end"
                android:paddingBottom="25dp"
                android:paddingLeft="20dp" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/spotDismiss"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="1dip"
            android:text="@string/dismiss" />

        <Button
            android:id="@+id/spotSubmit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="1dip"
            android:text="@string/submit" />


    </LinearLayout>
</LinearLayout>