<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip">

        <ImageView
            android:id="@+id/zero_icon_image"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:padding="5dip"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:padding="5dip"
            android:text="@string/no_offers_found"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="20.0dip"
        android:paddingTop="10.0dip">

        <TextView
            android:id="@+id/txtZeroMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5.0dip"
            android:text="@string/no_offers"
            android:textColor="@color/common_google_signin_btn_text_light"
            android:textAppearance="?android:attr/textAppearanceMedium"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/zeroDismiss"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="1dip"
            android:text="@string/dismiss" />

    </LinearLayout>
</LinearLayout>