<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outerLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffd22820">

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <TableLayout
        android:id="@+id/myLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffd22820"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/first_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgBtnGroceries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/groceries_50x50" />

                <TextView
                    android:id="@+id/txtGroceries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.0dip"
                    android:layout_marginTop="0.0dip"
                    android:gravity="center"
                    android:paddingTop="9.0dip"
                    android:text="@string/groceries"
                    android:textColor="@android:color/white"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgBtnOffLicence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/offlicence_50x50" />

                <TextView
                    android:id="@+id/txtOffLicence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.0dip"
                    android:layout_marginTop="0.0dip"
                    android:gravity="center"
                    android:paddingTop="9.0dip"
                    android:text="@string/off_licence"
                    android:textColor="@android:color/white"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/second_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgBtnPubsAndBars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/pubsandbars_50x50" />

                <TextView
                    android:id="@+id/txtPubsAndBars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.0dip"
                    android:layout_marginTop="0.0dip"
                    android:gravity="center"
                    android:paddingTop="9.0dip"
                    android:text="@string/pubs_amp_bars"
                    android:textColor="@android:color/white"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgBtnCoffeeAndCafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/coffeandcafe_50x50" />

                <TextView
                    android:id="@+id/txtCoffeeAndCafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.0dip"
                    android:layout_marginTop="0.0dip"
                    android:gravity="center"
                    android:paddingTop="9.0dip"
                    android:text="@string/coffee_amp_cafes"
                    android:textColor="@android:color/white"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@id/second_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgBtnFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/food_50x50" />

                <TextView
                    android:id="@+id/txtFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.0dip"
                    android:layout_marginTop="0.0dip"
                    android:gravity="center"
                    android:paddingTop="9.0dip"
                    android:text="@string/food"
                    android:textColor="@android:color/white"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgBtnHairAndBeauty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/hairandbeauty_50x50" />

                <TextView
                    android:id="@+id/txtHairAndBeauty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.0dip"
                    android:layout_marginTop="0.0dip"
                    android:gravity="center"
                    android:paddingTop="9.0dip"
                    android:text="@string/hair_amp_beauty"
                    android:textColor="@android:color/white"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@id/second_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgBtnOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/other_50x50" />

                <TextView
                    android:id="@+id/txtOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.0dip"
                    android:layout_marginTop="0.0dip"
                    android:gravity="center"
                    android:paddingTop="9.0dip"
                    android:text="@string/other"
                    android:textColor="@android:color/white"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgBtnSpotAndShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/spotshare_50x50" />

                <TextView
                    android:id="@+id/txtSpotAndShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0.0dip"
                    android:layout_marginTop="0.0dip"
                    android:gravity="center"
                    android:paddingTop="9.0dip"
                    android:text="@string/spot_amp_share"
                    android:textColor="@android:color/white"
                    android:textSize="18.0sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@id/second_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:layout_weight="2.0"
                android:background="#ffd22820"
                android:gravity="center"
                android:paddingBottom="12dip"
                android:text="@string/all_categories"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</RelativeLayout>